2011-05-18  Yi Shen  <yi.4.shen@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] Enterkey to go to Newline does not work in the text area(in HTML form)
        https://bugs.webkit.org/show_bug.cgi?id=33179

        Unskip the fast/events/onsearch-enter.html test.

        * platform/qt/Skipped:

2011-05-18  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Beth Dakin.

        Tests that we do not crash when prematurely calling removeChild,
        followed by destroy call on table caption.
        https://bugs.webkit.org/show_bug.cgi?id=61083

        * fast/table/table-captions-child-visible-crash-expected.txt: Added.
        * fast/table/table-captions-child-visible-crash.html: Added.

2011-05-09  Luiz Agostini  <luiz.agostini@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Redirection of HTTP POST (3xx) incorrectly includes original POST data
        https://bugs.webkit.org/show_bug.cgi?id=60440

        These new tests check that no POST content is sent to the new URL after receiving http
        status codes 301, 302 and 303, and checks that the POST content is sent to the new URL
        after receiving a 307 http status code.

        * http/tests/navigation/post-301-response-expected.txt: Added.
        * http/tests/navigation/post-301-response.html: Added.
        * http/tests/navigation/post-302-response-expected.txt: Added.
        * http/tests/navigation/post-302-response.html: Added.
        * http/tests/navigation/post-303-response-expected.txt: Added.
        * http/tests/navigation/post-303-response.html: Added.
        * http/tests/navigation/post-307-response-expected.txt: Added.
        * http/tests/navigation/post-307-response.html: Added.
        * http/tests/navigation/resources/redirected-post-request-contents.php: Added.
        * http/tests/navigation/resources/redirection-response.php: Added.

2011-05-17  Sam Magnuson  <smagnuson@netflix.com>
