@@ -1,8 +1,17 @@
-      
+        
 PASS selectElement.selectedIndex is -1
 PASS selectElement.selectedIndex is -1
 PASS selectElement.selectedIndex is 0
 PASS selectElement.selectedIndex is -1
 PASS selectElement.selectedIndex is -1
 PASS selectElement.selectedIndex is 0
+PASS selectElement.options[0].selected is true
+PASS selectElement.options[1].selected is true
+PASS selectElement.options[2].selected is false
+PASS selectElement.options[0].selected is true
+PASS selectElement.options[1].selected is true
+PASS selectElement.options[2].selected is false
+PASS selectElement.options[0].selected is true
+PASS selectElement.options[1].selected is false
+PASS selectElement.options[2].selected is false
 
